# gha-biorxiv-stats-action

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yaml  pyproject.toml
.github/workflows/: codeql.yml  ruff.yml  write-biorxiv-stats.yml
app/: app.py  utils.py
data/: 12.csv  13.csv
src/: app.py  utils.py
tests/: test_utils.py
